--- a/kanpe.html
+++ b/kanpe.html
@@ -29,7 +29,7 @@
 
   <!--****** HEADER ************** -->
 
-<header class="pmenu-header">
+<header class="menu-header">
   <div class="header-left">
     <a class="menu-btn"><i class="icon ion-navicon"></i></a>
   </div>
@@ -47,11 +47,11 @@
       <li class="pmenu-link"><a href="./concept.html"><i class="icon ion-coffee"></i>&nbsp;&nbsp;Conception</a></li>
       <li class="pmenu-link"><a href="./kanpe.html"><i class="icon ion-code"></i>&nbsp;&nbsp;CheetSheet</a></li>
       <li class="pmenu-submenu">
-          <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Templates  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
+          <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Themses  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
           <ul>
-              <li class="pmenu-link"><a href="#">
+              <li class="pmenu-link"><a href="./themes/admin.html">
                 Dashboard</a></li>
-              <li class="pmenu-link"><a href="#">Landing Pages</a></li>
+              <li class="pmenu-link"><a href="./themes/landing.html">Landing Pages</a></li>
               <li class="pmenu-link"><a href="">Coming Soon...</a></li>
           </ul>
       </li>
@@ -62,14 +62,9 @@
     <a class=""><h4 class="logo">QWERTY</h4></a>
   </div>
   <div class="header-right">
-    <a class="clean-search-show"><i class="icon ion-ios-search-strong"></i></a>
+    <a class=""><i class="icon ion-ios-search-strong"></i></a>
   </div>
 </header>
-
-<div class="clean-search">
-  <input class="clean-search-input" type="text" placeholder="Search everything and anything..." />
-  <a class="clean-search-btn"><i class="icon ion-ios-search-strong"></i></a>
-</div>
 
 <div class="site-overlay"></div>
 
@@ -87,75 +82,74 @@
       </div>
     </div>
   </div>
-
-  <div class="container">
-    <div class="row">
-      <section class="center slider">
-        <div>
-          <img src="http://placehold.it/350x300?text=1">
-        </div>
-        <div>
-          <img src="http://placehold.it/350x300?text=2">
-        </div>
-        <div>
-          <img src="http://placehold.it/350x300?text=3">
-        </div>
-        <div>
-          <img src="http://placehold.it/350x300?text=4">
-        </div>
-        <div>
-          <img src="http://placehold.it/350x300?text=5">
-        </div>
-        <div>
-          <img src="http://placehold.it/350x300?text=6">
-        </div>
-      </section>
-    </div>
-  </div>
   <div class="container">
     <div class="row">
     	<div class="cards">
-    		<div class="card card-1" href="#">
+    		<div class="card twelve columns" href="#">
   				<span class="card-title">
   					<h3>This is a title for a card.</h3>
   				</span>
     			<span class="card-summary">
-    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page. A summary will also be present. Usually two to three brief sentences about the content on the detail page.
     			</span>
-    			<span class="card-meta">
-    				Published: June 18th, 2015
-    			</span>
-    			<span class="card-meta-right">
-    				<i class="icon ion-android-open"></i>&nbsp;Read more
-    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
   		  </div>
       </div>
     	<div class="cards">
-    		<div class="card card-2" href="#">
+    		<div class="card info three columns" href="#">
   				<span class="card-title">
-  					<h3>This is a title for a card.</h3>
+  					<h3><i class="icon ion-information-circled"></i> Information</h3>
   				</span>
     			<span class="card-summary">
     				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
     			</span>
-    			<span class="card-meta">
-    				Published: June 18th, 2015
-    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
   		  </div>
-    		<div class="card card-2" href="#">
+    		<div class="card succ three columns" href="#">
   				<span class="card-title">
-  					<h3>This is a title for a card.</h3>
+  					<h3><i class="icon ion-checkmark-circled"></i> Success!</h3>
   				</span>
     			<span class="card-summary">
     				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
     			</span>
-    			<span class="card-meta">
-    				Published: June 18th, 2015
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
+    		</div>
+    		<div class="card warn three columns" href="#">
+  				<span class="card-title">
+  					<h3><i class="icon ion-alert-circled"></i> Warning!</h3>
+  				</span>
+    			<span class="card-summary">
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
     			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
+  		  </div>
+    		<div class="card dang three columns" href="#">
+  				<span class="card-title">
+  					<h3><i class="icon ion-close-circled"></i> Error.</h3>
+  				</span>
+    			<span class="card-summary">
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
     		</div>
       </div>
       <div class="cards">
-    		<div class="card card-3" href="#">
+    		<div class="card four columns" href="#">
     			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/200/animals);">
     				<span class="card-title">
               <h3>This is a title for a card.This is a title for a card.This is a title for a card</h3>
@@ -164,11 +158,12 @@
     			<span class="card-summary">
     				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
     			</span>
-    			<span class="card-meta">
-    				Published: June 18th, 2015
-    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
     		</div>
-    		<div class="card card-3" href="#">
+    		<div class="card four columns" href="#">
     			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/400/people)">
     				<span class="card-title">
     					<h3>This is a title for a card</h3>
@@ -177,11 +172,12 @@
     			<span class="card-summary">
     				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
     			</span>
-    			<span class="card-meta">
-    				Published: June 18th, 2015
-    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
     		</div>
-    		<div class="card card-3" href="#">
+    		<div class="card four columns" href="#">
     			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/nature);">
     				<span class="card-title">
     					<h3>This is a title for a card</h3>
@@ -190,9 +186,10 @@
     			<span class="card-summary">
     				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
     			</span>
-    			<span class="card-meta">
-    				Published: June 18th, 2015
-    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
     		</div>
     	</div>
     </div>
@@ -368,57 +365,6 @@
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 <!-- Pushy JS -->
 <script src="js/pushy.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-<script>
-$(function() {
-
-  $('.clean-search-show').click(function(e) {
-    $('.clean-search').addClass('clean-search-active');
-  });
-  $('.wrapper').click(function(e) {
-    $('.clean-search').removeClass('clean-search-active');
-  });
-  $('.pmenu-submenu').click(function(e) {
-    if(jQuery(this).hasClass('pmenu-submenu-closed')){
-      $('.pmenu-icon',this).removeClass('ion-ios-arrow-down');
-      $('.pmenu-icon',this).addClass('ion-ios-arrow-right');
-    } else if (jQuery(this).hasClass('pmenu-submenu-open') ) {
-      $('.pmenu-icon',this).addClass('ion-ios-arrow-down');
-      $('.pmenu-icon',this).removeClass('ion-ios-arrow-right');
-    }
-  });
-
-  $('.center').slick({
-    dots: true,
-    arrows: false,
-    centerMode: true,
-    centerPadding: '20px',
-    slidesToShow: 3,
-    responsive: [
-      {
-        breakpoint: 768,
-        settings: {
-          dots: true,
-          arrows: false,
-          centerMode: true,
-          centerPadding: '20px',
-          slidesToShow: 3
-        }
-      },
-      {
-        breakpoint: 480,
-        settings: {
-          dots: true,
-          arrows: false,
-          centerMode: true,
-          centerPadding: '20px',
-          slidesToShow: 1
-        }
-      }
-    ]
-  });
-});
-</script>
 
 </body>
 </html>
