--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!--****** HEADER ************** -->
 
-<header class="pmenu-header">
+<header class="menu-header">
   <div class="header-left">
     <a class="menu-btn"><i class="icon ion-navicon"></i></a>
   </div>
@@ -47,11 +47,11 @@
       <li class="pmenu-link"><a href="./concept.html"><i class="icon ion-coffee"></i>&nbsp;&nbsp;Conception</a></li>
       <li class="pmenu-link"><a href="./kanpe.html"><i class="icon ion-code"></i>&nbsp;&nbsp;CheetSheet</a></li>
       <li class="pmenu-submenu">
-          <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Templates  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
+          <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Themses  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
           <ul>
-              <li class="pmenu-link"><a href="#">
+              <li class="pmenu-link"><a href="./themes/admin.html">
                 Dashboard</a></li>
-              <li class="pmenu-link"><a href="#">Landing Pages</a></li>
+              <li class="pmenu-link"><a href="./themes/landing.html">Landing Pages</a></li>
               <li class="pmenu-link"><a href="">Coming Soon...</a></li>
           </ul>
       </li>
@@ -62,14 +62,9 @@
     <a class=""><h4 class="logo">QWERTY</h4></a>
   </div>
   <div class="header-right">
-    <a class="clean-search-show"><i class="icon ion-ios-search-strong"></i></a>
+    <a class=""><i class="icon ion-ios-search-strong"></i></a>
   </div>
 </header>
-
-<div class="clean-search">
-  <input class="clean-search-input" type="text" placeholder="Search everything and anything..." />
-  <a class="clean-search-btn"><i class="icon ion-ios-search-strong"></i></a>
-</div>
 
 <div class="site-overlay"></div>
 
