change admin template

--- a/themes/admin.html
+++ b/themes/admin.html
@@ -31,9 +31,9 @@
 
 <header class="menu-header fix-menu-header">
   <div class="header-left">
+    <a class=""><h4 class="logo">Qwerty Admin</h4></a>
   </div>
   <div class="header-center">
-    <a class=""><h4 class="logo">Qwerty Admin</h4></a>
   </div>
   <div class="header-right">
   </div>
@@ -50,55 +50,35 @@
   </ul>
 </nav>
 
-<div class="clean-search">
-  <input class="clean-search-input" type="text" placeholder="Search everything and anything..." />
-  <a class="clean-search-btn"><i class="icon ion-ios-search-strong"></i></a>
-</div>
-
 <div class="site-overlay"></div>
 
 <!--****** MAIN CONTENT ************** -->
 
 <div class="wrapper ten columns" style="margin-left: 0;">
-
+  <div class="spacer-lg"></div>
   <div class="container">
+    <div class="row tx-center heading-top">
+      <h5 >TOP</h5>
+    </div>
     <div class="row">
       <div class="cards">
-        <div class="card three columns info" href="#">
+        <div class="card twelve columns" href="#">
           <span class="card-title">
-            <h3><i class="icon ion-information-circled"></i> Information</h3>
+            <h3><i class="icon ion-edit"></i> New Post</h3>
+            <a class="card-close"><i class="icon ion-close"></i></a>
           </span>
-          <span class="card-summary">
-            A summary will also be present. Usually two to three brief sentences about the content on the detail page. A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-          </span>
-        </div>
-        <div class="card three columns info" href="#">
-          <span class="card-title">
-            <h3><i class="icon ion-information-circled"></i> Information</h3>
-          </span>
-          <span class="card-summary">
-            A summary will also be present. Usually two to three brief sentences about the content on the detail page. A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-          </span>
-        </div>
-        <div class="card three columns info" href="#">
-          <span class="card-title">
-            <h3><i class="icon ion-information-circled"></i> Information</h3>
-          </span>
-          <span class="card-summary">
-            A summary will also be present. Usually two to three brief sentences about the content on the detail page. A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-          </span>
-        </div>
-        <div class="card three columns info" href="#">
-          <span class="card-title">
-            <h3><i class="icon ion-information-circled"></i> Information</h3>
-          </span>
-          <span class="card-summary">
-            A summary will also be present. Usually two to three brief sentences about the content on the detail page. A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+          <span class="card-summary hook-input">
+            <input type="text" placeholder="Enter URL" class="text" />
+            <input type="submit" class="submit" value="Hook" />
           </span>
         </div>
       </div>
-      <div class="cards">
-    		<div class="card six columns" href="#">
+      <div class="spacer-xs"></div>
+      <div class="cards six columns" style="margin-left: 0;">
+        <div class="row tx-center heading-top">
+          <h5>Views Ranking</h5>
+        </div>
+    		<div class="card" href="#">
     			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/arch);">
     				<span class="card-title">
     					<h3>This is a title for a card</h3>
@@ -112,7 +92,124 @@
       			<span class="right">Read more</span>
     			</div>
     		</div>
-    		<div class="card six columns" href="#">
+    		<div class="card" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/animal);">
+    				<span class="card-title">
+    					<h3>This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
+    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
+    		</div>
+    		<div class="card" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/tech);">
+    				<span class="card-title">
+    					<h3>This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
+    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
+    		</div>
+    		<div class="card" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/nature);">
+    				<span class="card-title">
+    					<h3>This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
+    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
+    		</div>
+    		<div class="card" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/people);">
+    				<span class="card-title">
+    					<h3>This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
+    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
+    		</div>
+      </div>
+      <div class="cards six columns">
+        <div class="row tx-center heading-top">
+          <h5>Hooks Ranking</h5>
+        </div>
+    		<div class="card" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/nature);">
+    				<span class="card-title">
+    					<h3>This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
+    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
+    		</div>
+    		<div class="card" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/tech);">
+    				<span class="card-title">
+    					<h3>This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
+    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
+    		</div>
+    		<div class="card" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/people);">
+    				<span class="card-title">
+    					<h3>This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
+    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
+    		</div>
+    		<div class="card" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/animal);">
+    				<span class="card-title">
+    					<h3>This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
+    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
+    		</div>
+    		<div class="card" href="#">
     			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/arch);">
     				<span class="card-title">
     					<h3>This is a title for a card</h3>
