--- a/themes/admin.html
+++ b/themes/admin.html
@@ -41,12 +41,12 @@
 
 <nav class="menu default-nav two columns">
   <ul>
-    <a href="./index.html"><li class="menu-link"><i class="icon ion-flag"></i>&nbsp;&nbsp;TOP</li></a>
-    <a href="./index.html"><li class="menu-link"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Archives</li></a>
-    <a href="./index.html"><li class="menu-link"><i class="icon ion-person-stalker"></i>&nbsp;&nbsp;Users</li></a>
-    <a href="./index.html"><li class="menu-link"><i class="icon ion-paper-airplane"></i>&nbsp;&nbsp;Notification</li></a>
-    <a href="./index.html"><li class="menu-link"><i class="icon ion-arrow-graph-up-right"></i>&nbsp;&nbsp;Analytics</li></a>
-  <a href="./index.html">  <li class="menu-link"><i class="icon ion-information-circled"></i>&nbsp;&nbsp;Status</li></a>
+    <a href="./index.html"><li class="menu-link"><i class="icon ion-flag"></i>TOP</li></a>
+    <a href="./index.html"><li class="menu-link"><i class="icon ion-document-text"></i>Archives</li></a>
+    <a href="./index.html"><li class="menu-link"><i class="icon ion-person-stalker"></i>Users</li></a>
+    <a href="./index.html"><li class="menu-link"><i class="icon ion-paper-airplane"></i>Notification</li></a>
+    <a href="./index.html"><li class="menu-link"><i class="icon ion-arrow-graph-up-right"></i>Analytics</li></a>
+  <a href="./index.html">  <li class="menu-link"><i class="icon ion-android-apps"></i>Status</li></a>
   </ul>
 </nav>
 
