modify nav style

--- a/themes/admin.html
+++ b/themes/admin.html
@@ -31,7 +31,7 @@
 
 <header class="menu-header fix-menu-header">
   <div class="header-left">
-    <a class=""><h4 class="logo">Qwerty Admin</h4></a>
+    <a class="text-logo"><h4 class="logo">Qwerty Admin</h4></a>
   </div>
   <div class="header-center">
   </div>
