--- a/themes/admin.html
+++ b/themes/admin.html
@@ -27,20 +27,9 @@
 </head>
 <body>
 
-  <!--****** HEADER ************** -->
-
-<header class="menu-header fix-menu-header">
-  <div class="header-left">
-    <a class="text-logo"><h4 class="logo">Qwerty Admin</h4></a>
-  </div>
-  <div class="header-center">
-  </div>
-  <div class="header-right">
-  </div>
-</header>
-
 <nav class="menu default-nav two columns">
   <ul>
+    <a class="text-logo tx-center"><h4 class="logo">Qwerty Admin</h4></a>
     <a href="./index.html"><li class="menu-link"><i class="icon ion-flag"></i>TOP</li></a>
     <a href="./index.html"><li class="menu-link"><i class="icon ion-document-text"></i>Archives</li></a>
     <a href="./index.html"><li class="menu-link"><i class="icon ion-person-stalker"></i>Users</li></a>
@@ -53,8 +42,19 @@
 <div class="site-overlay"></div>
 
 <!--****** MAIN CONTENT ************** -->
-
 <div class="wrapper ten columns" style="margin-left: 0;">
+
+  <!--****** HEADER ************** -->
+  <header class="menu-header fix-menu-header">
+    <div class="header-left">
+      <button class="btn btn-dark btn-sm">Button</button>
+    </div>
+    <div class="header-center">
+    </div>
+    <div class="header-right">
+      <button class="btn btn-blue btn-sm">Button</button>
+    </div>
+  </header>
   <div class="spacer-lg"></div>
   <div class="container">
     <div class="row tx-center heading-top">
