--- a/themes/admin.html
+++ b/themes/admin.html
@@ -250,8 +250,8 @@ $(function() {
     if(f){
     $('.drawer-items').css('display', 'none');
     $('.drawer-items').css('margin-top', '-306px');
-    $('.ion-chevron-down').addClass('ion-chevron-down');
-    $('.ion-chevron-down').removeClass('ion-chevron-up');
+    $('.ion-chevron-up').addClass('ion-chevron-down');
+    $('.ion-chevron-up').removeClass('ion-chevron-up');
     f = false;
     }else {
     $('.drawer-items').css('display', 'block');
