add card accent

--- a/kanpe.html
+++ b/kanpe.html
@@ -86,7 +86,7 @@
     <div class="row">
     	<div class="cards">
     		<div class="card twelve columns" href="#">
-  				<span class="card-title">
+  				<span class="card-title accent-orange">
   					<h3>This is a title for a card.</h3>
   				</span>
     			<span class="card-summary">
