--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
 <!--****** MAIN CONTENT ************** -->
 
-<div class="wrapper">
+<div class="wrap">
 
-  <div class="container">
+  <div class="pack">
     <div class="row">
       <div class="tx-center">
         <img src="images/logo.png" width="180px" />
@@ -92,7 +92,7 @@ $(function() {
   $('.clean-search-show').click(function(e) {
     $('.clean-search').addClass('clean-search-active');
   });
-  $('.wrapper').click(function(e) {
+  $('.wrap').click(function(e) {
     $('.clean-search').removeClass('clean-search-active');
   });
   $('.pmenu-submenu').click(function(e) {
