--- a/kanpe.html
+++ b/kanpe.html
@@ -67,9 +67,9 @@
 
 <!--****** MAIN CONTENT ************** -->
 
-<div class="wrapper">
+<div class="wrap">
 
-  <div class="container">
+  <div class="pack">
     <div class="row">
       <div class="tx-center">
         <img src="images/logo.png" width="180px" />
@@ -79,10 +79,10 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <div class="pack">
     <div class="row">
     	<div class="cards">
-    		<div class="card twelve columns" href="#">
+    		<div class="card twelve cols" href="#">
   				<span class="card-title accent-orange">
   					<h3>This is a title for a card.</h3>
   				</span>
@@ -90,13 +90,12 @@
     				A summary will also be present. Usually two to three brief sentences about the content on the detail page. A summary will also be present. Usually two to three brief sentences about the content on the detail page.
     			</span>
     			<div class="card-meta">
-    				<span class="left">Published: June 18th, 2015</span>
-      			<span class="right">Read more</span>
+            <button style="width: 100%; background-color: #333;" class=""></button>
     			</div>
   		  </div>
       </div>
     	<div class="cards">
-    		<div class="card info three columns" href="#">
+    		<div class="card info three cols" href="#">
   				<span class="card-title">
   					<h3><i class="icon ion-information-circled"></i> Information</h3>
   				</span>
@@ -108,7 +107,7 @@
       			<span class="right">Read more</span>
     			</div>
   		  </div>
-    		<div class="card succ three columns" href="#">
+    		<div class="card succ three cols" href="#">
   				<span class="card-title">
   					<h3><i class="icon ion-checkmark-circled"></i> Success!</h3>
   				</span>
@@ -120,7 +119,7 @@
       			<span class="right">Read more</span>
     			</div>
     		</div>
-    		<div class="card warn three columns" href="#">
+    		<div class="card warn three cols" href="#">
   				<span class="card-title">
   					<h3><i class="icon ion-alert-circled"></i> Warning!</h3>
   				</span>
@@ -132,7 +131,7 @@
       			<span class="right">Read more</span>
     			</div>
   		  </div>
-    		<div class="card dang three columns" href="#">
+    		<div class="card dang three cols" href="#">
   				<span class="card-title">
   					<h3><i class="icon ion-close-circled"></i> Error.</h3>
   				</span>
@@ -146,7 +145,7 @@
     		</div>
       </div>
       <div class="cards">
-    		<div class="card four columns" href="#">
+    		<div class="card four cols" href="#">
     			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/200/animals);">
     				<span class="card-title">
               <h3>This is a title for a card.This is a title for a card.This is a title for a card</h3>
@@ -160,7 +159,7 @@
       			<span class="right">Read more</span>
     			</div>
     		</div>
-    		<div class="card four columns" href="#">
+    		<div class="card four cols" href="#">
     			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/400/people)">
     				<span class="card-title">
     					<h3>This is a title for a card</h3>
@@ -174,7 +173,7 @@
       			<span class="right">Read more</span>
     			</div>
     		</div>
-    		<div class="card four columns" href="#">
+    		<div class="card four cols" href="#">
     			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/nature);">
     				<span class="card-title">
     					<h3>This is a title for a card</h3>
@@ -192,7 +191,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="pack">
     <div class="row">
       <h4>Aligner</h4>
       <div class="aligner" style="height: 200px;">
@@ -205,9 +204,9 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="pack">
     <div class="row">
-      <div class="one-half column">
+      <div class="one-half col">
         <h4>Spacer</h4>
         <p>Following space is spacer-xl</p>
         <div class="spacer-xl"></div>
@@ -223,28 +222,28 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="pack">
     <div class="row">
     <h4>Text Align</h4>
     </div>
     <div class="row">
-      <div class="three columns fill-dark">
+      <div class="three cols fill-dark">
         <p class="tx-center">This Text align to center.</p>
       </div>
-      <div class="three columns fill-dark">
+      <div class="three cols fill-dark">
         <p class="tx-right">This Text align to right.</p>
       </div>
-      <div class="three columns fill-dark">
+      <div class="three cols fill-dark">
         <p class="tx-left">This Text align to left.</p>
       </div>
-      <div class="three columns fill-dark">
+      <div class="three cols fill-dark">
         <p class="tx-justify">This is justify text.This is justify text.This is justify text.This is justify text.This is justify text.</p>
       </div>
     </div>
   </div>
 
-  <!-- .container is main centered wrapper -->
-  <div class="container">
+  <!-- .pack is main centered wrap -->
+  <div class="pack">
     <!-- Standard Headings -->
     <h1>Heading</h1>
     <h2>Heading</h2>
@@ -261,26 +260,26 @@
     <em>Italicized</em>
     <a>Colored</a>
     <u>Underlined</u>
-    <!-- columns should be the immediate child of a .row -->
+    <!-- cols should be the immediate child of a .row -->
     <div class="row">
-      <div class="one column">One</div>
-      <div class="eleven columns">Eleven</div>
+      <div class="one col">One</div>
+      <div class="eleven cols">Eleven</div>
     </div>
 
-    <!-- just use a number and class 'column' or 'columns' -->
+    <!-- just use a number and class 'col' or 'cols' -->
     <div class="row">
-      <div class="two columns">Two</div>
-      <div class="ten columns">Ten</div>
+      <div class="two cols">Two</div>
+      <div class="ten cols">Ten</div>
     </div>
 
-    <!-- there are a few shorthand columns widths as well -->
+    <!-- there are a few shorthand cols widths as well -->
     <div class="row">
-      <div class="one-third column">1/3</div>
-      <div class="two-thirds column">2/3</div>
+      <div class="one-third col">1/3</div>
+      <div class="two-thirds col">2/3</div>
     </div>
     <div class="row">
-      <div class="one-half column">1/2</div>
-      <div class="one-half column">1/2</div>
+      <div class="one-half col">1/2</div>
+      <div class="one-half col">1/2</div>
     </div>
     <!-- Standard buttons -->
     <button>Button element</button>
@@ -302,11 +301,11 @@
 
     <form>
       <div class="row">
-        <div class="six columns">
+        <div class="six cols">
           <label for="exampleEmailInput">Your email</label>
           <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
         </div>
-        <div class="six columns">
+        <div class="six cols">
           <label for="exampleRecipientInput">Reason for contacting</label>
           <select class="u-full-width" id="exampleRecipientInput">
             <option value="Option 1">Questions</option>
